--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -33,9 +33,11 @@ jobs:
                   # brew install libomp
                   # brew install llvm
                   # ls /opt/homebrew/opt/libomp/lib
-                  ls /usr/local/include
-                  echo "---------"
-                  ls /usr/local/lib
+                  # ls /usr/local/include
+                  ls /usr/local/opt/libomp/include
+                  echo "----------------------------"
+                  # ls /usr/local/lib
+                  ls /usr/local/opt/libomp/lib
                   # brew reinstall libomp
 
                   # This is needed to import numpy in pypy3 (but not needed for
