--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -11,8 +11,7 @@ on:
 jobs:
     build:
 
-        # runs-on: macos-latest
-        runs-on: macos-11
+        runs-on: macos-latest
         strategy:
             fail-fast: false
             matrix:
@@ -31,7 +30,6 @@ jobs:
               run: |
                   brew install suite-sparse
                   # brew install libomp
-                  # brew install llvm
                   # ls /opt/homebrew/opt/libomp/lib
                   # ls /usr/local/include
                   ls /usr/local/opt/libomp/include
