--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -34,8 +34,8 @@ jobs:
                   # Starting from libomp>=15.0, the libomp installation in homebrew is "keg-only",
                   # meaning that libomp is only installed in homebrew's directory, but not moved
                   # to /usr/local to avoid other OpenMP installations (such as with gcc's version
-                  # of OpenMP). To use the homebrew's version of OpenMP,the followong symbolic
-                  # links are created. Without these, the instllation will fail with the error
+                  # of OpenMP). To use the homebrew's version of OpenMP,the following symbolic
+                  # links are created. Without these, the installation will fail with the error
                   # of "fatal error: omp.h file found"
                   ln -s /usr/local/opt/libomp/include/omp-tools.h /usr/local/include/omp-tools.h
                   ln -s /usr/local/opt/libomp/include/omp.h /usr/local/include/omp.h
