--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -29,7 +29,8 @@ jobs:
             - name: Install cibuildwheel (not macos)
               if: matrix.os != 'macos-latest'
               run: |
-                  python -m pip install cibuildwheel==2.9.0
+                  # python -m pip install cibuildwheel==2.9.0
+                  python -m pip install cibuildwheel
 
             - name: Install cibuildwheel (macos)
               if: matrix.os == 'macos-latest'
@@ -125,7 +126,8 @@ jobs:
                   # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
                   # CIBW_BEFORE_ALL_LINUX: chmod +x .github/scripts/install_cuda.sh && .github/scripts/install_cuda.sh
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
-                  CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
+                  # CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
+                  CIBW_SKIP: "cp27-* cp35-* cp36-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1 CUDA_HOME=/usr/local/cuda"
             
