--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -30,12 +30,13 @@ jobs:
               run: |
                   sudo apt-get update
                   sudo apt-get install libsuitesparse-dev
+                  rm -rf /opt/hostedtoolcache
 
             - name: Install CUDA
               uses: Jimver/cuda-toolkit@v0.2.8
               id: cuda-toolkit
               with:
-                  cuda: '11.7.0'
+                  cuda: '12.1.0'
 
             - name: Install package and dependencies (CPython)
               if: (!contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.10') && (matrix.python-version != '3.11')
