--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -30,7 +30,10 @@ jobs:
               run: |
                   sudo apt-get update
                   sudo apt-get install libsuitesparse-dev
-                  rm -rf /opt/hostedtoolcache
+
+              # Without this, installing cuda give error: no much space left on device
+            - name: Clear Cache
+              run: rm -rf /opt/hostedtoolcache 
 
             - name: Install CUDA
               uses: Jimver/cuda-toolkit@v0.2.11
