--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,9 +1,9 @@
 name: build-windows
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types: 
             - published
@@ -25,12 +25,16 @@ jobs:
               uses: actions/setup-python@v4
               with:
                   python-version: ${{ matrix.python-version }}
+
+              # Without this, installing cuda give error: no much space left on device
+            - name: Clear Cache
+              run: rm -rf /opt/hostedtoolcache 
                   
             - name: Install CUDA
-              uses: Jimver/cuda-toolkit@v0.2.8
+              uses: Jimver/cuda-toolkit@v0.2.11
               id: cuda-toolkit
               with:
-                  cuda: '11.7.0'
+                  cuda: '12.1.0'
 
             - name: Install package and dependencies
               run: |
