--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -65,6 +65,10 @@ jobs:
                   # brew install lapack
                   # pip3 install numpy
 
+              # Without this, installing cuda give error: no much space left on device
+            - name: Clear Cache
+              run: rm -rf /opt/hostedtoolcache 
+
             # To install CUDA in windows, uncomment the following lines. Note
             # that the Jimver@cuda-toolkit action (below) can only install cuda
             # on linux and windows, but not macos. Also, for linux, we should
@@ -75,10 +79,10 @@ jobs:
             # support".
             - name: Install CUDA
               if: matrix.os == 'windows-latest'
-              uses: Jimver/cuda-toolkit@v0.2.8
+              if: matrix.os == 'windows-latest'
               id: cuda-toolkit
               with:
-                  cuda: '11.7.0'
+                  cuda: '12.1.0'
 
             # Build wheel for windows with CUDA enabled. Note that cibuildwheel
             # does not need manylinux docker, thuns, CUDA can be installed in
