--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,9 +1,9 @@
 name: build-linux
 
 on:
-    push:
-        branches:
-            - main
+    # push:
+    #     branches:
+    #         - main
     release:
         types: 
             - published
@@ -39,7 +39,7 @@ jobs:
               uses: Jimver/cuda-toolkit@v0.2.11
               id: cuda-toolkit
               with:
-                  cuda: '11.7.0'
+                  cuda: '12.1.0'
 
             - name: Install package and dependencies (CPython)
               if: (!contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.10') && (matrix.python-version != '3.11')
