--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -83,7 +83,8 @@ jobs:
             # in the previous action (see above).
             - name: Build wheels in windows with CUDA support
               if: matrix.os == 'windows-latest'
-              run: python -m cibuildwheel --output-dir wheelhouse
+              # run: python -m cibuildwheel --output-dir wheelhouse
+              uses: pypa/cibuildwheel@v2.15.0
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
                   CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
@@ -116,7 +117,8 @@ jobs:
             # wheel is that the end-user does not have to install cuda toolkit.
             - name: Build wheels in linux with CUDA support
               if: matrix.os == 'ubuntu-latest'
-              run: python -m cibuildwheel --output-dir wheelhouse
+              # run: python -m cibuildwheel --output-dir wheelhouse
+              uses: pypa/cibuildwheel@v2.15.0
               env:
                   CIBW_MANYLINUX_X86_64_IMAGE: sameli/manylinux2014_x86_64_cuda_12.2
                   # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
