pki with v12 test on 11 2 fix path 5

--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -67,6 +67,7 @@ jobs:
 
             # Without this, installing cuda give error: no much space left on device
             - name: Clear Cache
+              if: matrix.os != 'windows-latest'
               run: rm -rf /opt/hostedtoolcache 
 
             # To install CUDA in windows, uncomment the following lines. Note
