--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -26,15 +26,9 @@ jobs:
               with:
                 python-version: '3.11'
 
-            - name: Install cibuildwheel (not macos)
-              if: matrix.os != 'macos-latest'
-              run: |
-                  python -m pip install cibuildwheel==2.15.0
-
             - name: Install cibuildwheel (macos)
               if: matrix.os == 'macos-latest'
-              run: |
-                  python -m pip install cibuildwheel
+              run: python -m pip install cibuildwheel
 
             - name: Install numpy
               run: |
@@ -60,6 +54,7 @@ jobs:
                   
               # Without this, installing cuda give error: no much space left on device
             - name: Clear Cache
+              if: matrix.os != 'windows-latest'
               run: rm -rf /opt/hostedtoolcache 
 
             # To install CUDA in windows, uncomment the following lines. Note
@@ -83,13 +78,14 @@ jobs:
             # in the previous action (see above).
             - name: Build wheels in windows with CUDA support
               if: matrix.os == 'windows-latest'
-              # run: python -m cibuildwheel --output-dir wheelhouse
               uses: pypa/cibuildwheel@v2.15.0
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
                   CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=0"
+              with:
+                output-dir: wheelhouse
            
             # Do not enable compiling with CUDA for macos since NIVDIA no
             # longer supports CUDA in the macos.
@@ -117,7 +113,6 @@ jobs:
             # wheel is that the end-user does not have to install cuda toolkit.
             - name: Build wheels in linux with CUDA support
               if: matrix.os == 'ubuntu-latest'
-              # run: python -m cibuildwheel --output-dir wheelhouse
               uses: pypa/cibuildwheel@v2.15.0
               env:
                   CIBW_MANYLINUX_X86_64_IMAGE: sameli/manylinux2014_x86_64_cuda_12.2
@@ -127,6 +122,8 @@ jobs:
                   CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=0 CUDA_HOME=/usr/local/cuda"
+              with:
+                output-dir: wheelhouse
             
             - name: Upload artifacts
               uses: actions/upload-artifact@v3
