--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -1,9 +1,9 @@
 name: deploy-conda
 
 on:
-    push:
-        branches:
-            - main
+    # push:
+    #     branches:
+    #         - main
     release:
         types: 
             - published
@@ -22,7 +22,7 @@ jobs:
               uses: actions/checkout@v4
             
             - name: Setup Python 
-              uses: actions/setup-python@v3
+              uses: actions/setup-python@v4
               with:
                 python-version: '3.11'
 
