--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -1,9 +1,9 @@
 name: deploy-pypi
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types:
             - published
@@ -19,22 +19,16 @@ jobs:
                 
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
             
             - name: Setup Python 
               uses: actions/setup-python@v4
               with:
                 python-version: '3.11'
 
-            - name: Install cibuildwheel (not macos)
-              if: matrix.os != 'macos-latest'
-              run: |
-                  python -m pip install cibuildwheel==2.9.0
-
             - name: Install cibuildwheel (macos)
               if: matrix.os == 'macos-latest'
-              run: |
-                  python -m pip install cibuildwheel
+              run: python -m pip install cibuildwheel
 
             - name: Install numpy
               run: |
@@ -91,12 +85,14 @@ jobs:
             # in the previous action (see above).
             - name: Build wheels in windows with CUDA support
               if: matrix.os == 'windows-latest'
-              run: python -m cibuildwheel --output-dir wheelhouse
+              uses: pypa/cibuildwheel@v2.15.0
               env:
                   CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
                   CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1"
+              with:
+                output-dir: wheelhouse
            
             # Do not enable compiling with CUDA for macos since NIVDIA no
             # longer supports CUDA in the macos.
@@ -124,7 +120,7 @@ jobs:
             # the user has to install cuda library themselves.
             - name: Build wheels in linux with CUDA support
               if: matrix.os == 'ubuntu-latest'
-              run: python -m cibuildwheel --output-dir wheelhouse
+              uses: pypa/cibuildwheel@v2.15.0
               env:
                   CIBW_MANYLINUX_X86_64_IMAGE: sameli/manylinux2014_x86_64_cuda_12.2
                   # CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
@@ -133,6 +129,8 @@ jobs:
                   CIBW_SKIP: "pp* cp27-* cp35-* cp36-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1 CUDA_HOME=/usr/local/cuda"
+              with:
+                output-dir: wheelhouse
             
             - name: Upload artifacts
               uses: actions/upload-artifact@v3
