--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -24,7 +24,7 @@ requirements:
         - setuptools
         - numpy>1.11
         - scipy>=1.5
-        - cython>=0.29
+        - cython>=0.29,<3.0
         - pip
         - llvm-openmp  # [osx]
     run:
