--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = ["setuptools", "wheel", "numpy>1.11", "scipy>=1.5", "Cython>=0.29,<3.0"]
+requires = ["setuptools", "wheel", "numpy>1.11", "scipy>=1.5",
+            "cython>=0.29,<3.0"]
