--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -11,7 +11,7 @@ on:
 jobs:
     build:
 
-        runs-on: macos-latest
+        runs-on: macos-latest-xlarge
         strategy:
             fail-fast: false
             matrix:
