--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,9 +1,9 @@
 name: build-macos
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types: 
             - published
@@ -15,7 +15,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python-version: ['3.9', '3.10', '3.11']
+                python-version: ['3.9', '3.10', '3.11', '3.12']
 
         steps:
             - name: Checkout
@@ -57,7 +57,7 @@ jobs:
             #       cuda: '12.1.0'
 
             - name: Install package and dependencies
-              if: (matrix.python-version != '3.10') && (matrix.python-version != '3.11')
+              if: (matrix.python-version != '3.10') && (matrix.python-version != '3.11') && (matrix.python-version != '3.12')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
