--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -70,7 +70,7 @@ jobs:
 
             # For python 3.10, 3.11 do not install extras (sparsesuite)
             - name: Install package and dependencies
-              if: (matrix.python-version == '3.10') || (matrix.python-version == '3.11')
+              if: (matrix.python-version == '3.10') || (matrix.python-version == '3.11') || (matrix.python-version == '3.12')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
