--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -34,7 +34,7 @@ jobs:
             - name: Install OpenMP and numpy for mac
               if: runner.os == 'macos'
               run: |
-                  brew install libomp  # TEST
+                  # brew install libomp
 
                   # Starting from libomp>=15.0, the libomp installation in homebrew is "keg-only",
                   # meaning that libomp is only installed in homebrew's directory, but not moved
