--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -101,7 +101,7 @@ jobs:
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-* cp312-*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_ENVIRONMENT: "USE_CBLAS=0 USE_CUDA=0"
-                  CIBW_BEFORE_BUILD_MACOS: brew install llvm libomp && export CC=/usr/local/opt/llvm/bin/clang
+                  # CIBW_BEFORE_BUILD_MACOS: brew install llvm libomp && export CC=/usr/local/opt/llvm/bin/clang
               with:
                 output-dir: wheelhouse
 
