--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -1,9 +1,9 @@
 name: build-linux
 
 on:
-    # push:
-    #     branches:
-    #         - main
+    push:
+        branches:
+            - main
     release:
         types: 
             - published
@@ -15,7 +15,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                python-version: ['3.9', '3.10', '3.11', 'pypy3.8', 'pypy3.9', 'pypy3.10']
+                python-version: ['3.9', '3.10', '3.11', '3.12', 'pypy3.8', 'pypy3.9', 'pypy3.10']
 
         steps:
             - name: Checkout
@@ -42,7 +42,7 @@ jobs:
                   cuda: '12.1.0'
 
             - name: Install package and dependencies (CPython)
-              if: (!contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.10') && (matrix.python-version != '3.11')
+              if: (!contains(matrix.python-version, 'pypy')) && (matrix.python-version != '3.10') && (matrix.python-version != '3.11') && (matrix.python-version != '3.12')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
@@ -56,7 +56,7 @@ jobs:
 
             # For python 3.10 and 3.11, do not install extras (sparsesuite)
             - name: Install package and dependencies (CPython)
-              if: (matrix.python-version == '3.10') || (matrix.python-version == '3.11')
+              if: (matrix.python-version == '3.10') || (matrix.python-version == '3.11') || (matrix.python-version == '3.12')
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
