--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -82,6 +82,7 @@ jobs:
                   USE_CUDA: 0
 
             - name: Test
+              if: (matrix.python-version != '3.12')  # matplotlib still depends on deprecated distutils in the new python 3.12
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
